chore: set up docker compose for all microservices

--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=payment
+server.port=8082
+
+spring.application.name=payment_app
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/payment_db
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.defer-datasource-initialization=true
+
+spring.sql.init.mode=always
