--- a/product/src/main/resources/application.properties
+++ b/product/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=product
+server.port=8080
+
+spring.application.name=product_app
+
+spring.datasource.url=jdbc:postgresql://localhost:5430/product_db
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.defer-datasource-initialization=true
+
+spring.sql.init.mode=always
